moved proguardOptions and proguardMerge into autoimport and added scripted plugin