@@ -3,7 +3,7 @@ sbtPlugin := true
 
 organization := "com.typesafe.sbt"
 name := "sbt-proguard"
-version := "0.2.4-SNAPSHOT"
+version := "0.2.5"
 
 publishMavenStyle := false
 
@@ -13,3 +13,5 @@ bintrayPackage := name.value
 bintrayReleaseOnPublish := false
 
 //crossSbtVersions := Seq("0.13.16", "1.0.0")
+
+scriptedLaunchOpts := Seq("-Xms512m", "-Xmx512m", "-XX:MaxPermSize=256m", s"-Dproject.version=${version.value}")
